# barrier

./: .gitignore  .travis.yml  LICENSE  README.md  barrier.cabal  data-generator.hs
.github/workflows/: haskell-ci.yml
data/: advance.txt
examples/: example.hs  make-test-data.hs
src/Graphics/Badge/: Barrier.hs
src/Graphics/Badge/Barrier/: Color.hs  Flat.hs  FlatSquare.hs  Internal.hs  Plastic.hs
src/Graphics/Badge/Barrier/Style/: Flat.hs  FlatSquare.hs  Plastic.hs
tests/: tasty.hs
